# BlueROV2_USBL

./: README.md  gui.py  main.py  main_cli.py  main_gui.py  notes.txt  raw_gps_data.txt  requirements.txt  run.sh  setup.cfg  usbl_controller.py  usbl_driver.py  usbl_relay_cli.py  usbl_relay_controller.py  usbl_relay_gui.py
bluerov2_usbl/: usbl_relay_cli.py  usbl_relay_controller.py  usbl_relay_gui.py
web/: main.html  main.js
