[metadata]
name = BlueROV2_USBL
version = 0.1.0
summary = A client program for merging USBL and GPS data together and forwarding it on to QGroundControl and a MAV
author = Nick Nothom, Dan Rose
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License

[options.entry_points]
console_scripts =
    usbl_relay = bluerov2_usbl.usbl_relay_cli:main

[options]
zip_safe = false
packages = find:
python_requires = >= 3.6
install_requires =
    pyserial
    pynmea2 @ https://github.com/NickNothom/pynmea2/tarball/master#egg=pynmea2
    # pywebview[qt,cef]
